# fedsec

./: .gitignore  README.md  TRAINING.md  check_exports.py  codebase_structure.txt  conftest.py  fix_cnn_shape.py  fix_paths.py  list_structure.py  pyproject.toml  reproduce.py  run_tests.py
artifacts/: MANIFEST.md
artifacts/cifar100_run/: training_cifar100.csv
artifacts/results/: exclusion_accounting.csv  headline_pareto.csv  ladder.csv  linkability.csv  mmin_curves_cifar10.csv  mmin_curves_cifar100.csv  mmin_sweep.csv  multiseed_frontier.csv  multiseed_ladder.csv  multiseed_linkability.csv  secagg_calibration.csv  secagg_cost.csv  training_cifar10.csv  training_cifar100.csv  training_synthetic.csv  utility_comparison_cifar10.csv  utility_comparison_cifar100.csv
artifacts/results - Copy/: headline_pareto.csv  ladder.csv  multiseed_frontier.csv  multiseed_linkability.csv  secagg_calibration.csv
experiments/: __init__.py  config.py  harness.py  multiseed.py  quiet.py  run_all_real.py  run_exclusion_accounting.py  run_gate.py  run_headline_pareto.py  run_ladder.py  run_linkability.py  run_mmin_curves.py  run_mmin_sweep.py  run_multiseed_frontier.py  run_multiseed_ladder_linkability.py  run_secagg_calibration.py  run_training.py  run_utility_comparison.py
experiments/plots/: exclusion_accounting.py  frontier_errorbars.py  linkability_horizon.py  mmin_sweep.py  pareto.py  secagg_calibration.py  training_curves.py  utility_comparison.py
src/dtfl/: rng.py  types.py
src/dtfl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_attack_defense_metrics.py  test_latent.py  test_learning_controller.py  test_protocol.py  test_separation_imports.py  test_separation_whitelist.py  test_transcript_sim.py
(+57 files in other folders)
