[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtfl"
version = "0.1.0"
description = "Privacy-preserving response-time-tiered federated learning: simulator, adversaries, and defenses (PoPETs artifact)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TBD" }]

# Core deps needed for Steps 0-3 (simulator + attacks + metrics).
# Heavy deps (torch, datasets) are optional extras pulled in at Step 4.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Step 4+: real FL training. Kept optional so the go/no-go gate runs without torch.
learning = [
    "torch>=2.1",
    "torchvision>=0.16",
]
# Step 6: real secure-aggregation calibration.
crypto = [
    "flwr>=1.7",
    "cryptography>=42.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Strict markers so a typo in a marker name fails loudly.
addopts = "-ra --strict-markers"
markers = [
    "separation: tests that enforce the latent/transcript threat-model boundary",
    "slow: tests that run a multi-round simulation",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# Allow assert in tests; allow unused imports in __init__ re-exports.
per-file-ignores = { "tests/*" = ["S101"], "**/__init__.py" = ["F401"] }
